Cleaned up code residues and files, and fixed .middle gap that's showing up on Windows

--- a/style.css
+++ b/style.css
@@ -1,16 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,900;1,300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;900&display=swap');
 
-
-/* CSS HEX
---violet-blue-crayola: #7e78d2ff;
---slate-blue: #6f58c9ff;
---powder-blue: #bfedefff;
---turquoise: #76e7cdff; */
-
-* {
-    /* outline: solid red 8px; */
-}
+/* * {
+    outline: solid red 4px;
+} */
     
 
 body {
@@ -174,10 +167,16 @@ a {
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    background-color: black;
 }
 
 .founder-with-information-container {
    display: flex;
+   justify-content: center;
+   background-color: aliceblue;
+   width: 100%;
+   padding: 50px;
+   padding-bottom: 0;
 }
 
 .founder-image {
@@ -198,7 +197,7 @@ a {
     justify-content: flex-start;
     align-items: center;
     align-self: flex-end;
-    flex: 1;
+    
 }
 
 .mid-title {
@@ -272,6 +271,7 @@ a {
     font-size: 38px;
     color: aliceblue;
     max-width: 800px;
+    max-height: 800px;
     margin: 0; 
 }
 
